# RideNow

./: .dockerignore  .editorconfig  .gitignore  AssessmentReport.md  Development_Log.md  PLAN.md  README.md  RideNow_Architecture_Proposal.md  mkdocs.yml  pyproject.toml  requirements-runtime.txt
.github/workflows/: ci.yml
docs/: Development_Log.md  RideNow_Architecture_Proposal.md  RideNow_Happy_Path_Event_Flow.puml  index.md
docs/adr/: ADR-001-language-and-stack.md
docs/analysis/: reference_analysis.md
docs/architecture/: acceptance_catalogue.md  data_model.md  events.md  overview.md  runtime_and_deployment.md  service_catalogue.md  testing_strategy.md
docs/guides/: broker_service_implementation.md  kubernetes_demo.md  manual_integration_testing.md  running_locally.md
docs/input/: Development_Log.md  RideNow_Architecture_Diagram.puml  RideNow_Codex_Turnkey_Prompt_v2.md
docs/operations/: monitoring.md  runbook.md
docs/state/: FINAL_REPORT.md  PHASE_1_DONE.md  PHASE_2A_DONE.md  PHASE_2_DONE.md  PHASE_3_DONE.md  PHASE_4_DONE.md  PHASE_5_DONE.md  PHASE_6_DONE.md  PHASE_7_DONE.md  PHASE_8_DONE.md  PHASE_9_DONE.md  STORY_driver-assigned_DONE.md  STORY_driver-assigned_START.md  STORY_issue-submitted_DONE.md  STORY_issue-submitted_START.md  STORY_no-driver-available_DONE.md  STORY_no-driver-available_START.md  STORY_payment-authorised_DONE.md  STORY_payment-authorised_START.md  STORY_payment-failed_DONE.md  STORY_payment-failed_START.md  STORY_request-ride-acknowledgement_DONE.md  STORY_request-ride-acknowledgement_START.md  STORY_ride-completed-payment-confirmed_DONE.md  STORY_ride-completed-payment-confirmed_START.md  STORY_route-and-eta-feedback_DONE.md  STORY_route-and-eta-feedback_START.md  STORY_trip-progress_DONE.md  STORY_trip-progress_START.md
infra/compose/: Dockerfile.service  docker-compose.yml  prometheus.yml
infra/kubernetes/: broker.yaml  driver.yaml  kustomization.yaml  namespace.yaml  notification.yaml  payment.yaml  postgres.yaml  pricing.yaml  rabbitmq.yaml  route.yaml  tracking.yaml
scripts/: integration_manual_test.sh  start.ps1  stop.ps1
src/ridenow_shared/: __init__.py  bootstrap.py  logging.py  metrics.py  retry.py
tests/: __init__.py
tests/acceptance/: conftest.py  support.py  test_cli_adapter.py  test_driver_assigned.py  test_health_check.py  test_issue_submitted.py  test_no_driver_available.py  test_payment_authorised.py  test_payment_failed.py  test_request_ride_acknowledgement.py  test_ride_completed_payment_confirmed.py  test_route_and_eta_feedback.py  test_trip_progress.py
tests/contracts/: __init__.py  contract_suites.py  test_in_memory_event_consumer_contract.py  test_in_memory_event_publisher_contract.py  test_in_memory_state_store_contract.py  test_postgres_state_store_contract.py  test_rabbitmq_event_consumer_contract.py  test_rabbitmq_event_publisher_contract.py
tests/e2e/: test_service_probes.py  test_system_smoke.py
tests/integration/: test_full_system_failure_path_connectivity.py  test_full_system_happy_path_connectivity.py  test_full_system_startup_readiness.py  test_manual_demo_mode.py  test_metrics_endpoint.py  test_postgres_state_store_persistence.py  test_rabbitmq_event_roundtrip.py  test_structured_logging.py
tests/nonfunctional/: runtime_helpers.py  test_broker_performance.py  test_broker_resilience.py  test_broker_soak.py  test_dependency_audit.py  test_monitoring_validation.py
tests/support/: __init__.py  postgres.py  rabbitmq.py
tests/unit/: test_apply_driver_assigned_use_case.py  test_apply_eta_updated_use_case.py  test_apply_no_driver_available_use_case.py  test_apply_payment_authorised_use_case.py  test_apply_payment_confirmed_use_case.py  test_apply_payment_failed_use_case.py  test_apply_ride_completed_use_case.py  test_apply_trip_progress_use_case.py  test_authorise_payment_use_case.py  test_bootstrap_runtimes.py  test_calculate_fare_use_case.py  test_calculate_route_use_case.py  test_capture_payment_use_case.py  test_complete_trip_use_case.py  test_derive_trip_status_use_case.py  test_driver_assignment_use_case.py  test_emit_driver_location_update_use_case.py  test_fare_request_relay_use_case.py  test_health_check_use_case.py  test_issue_submission_use_case.py  test_no_driver_available_relay_use_case.py  test_notification_relay_use_case.py  test_payment_authorisation_request_relay_use_case.py  test_payment_failed_relay_use_case.py  test_relay_payment_captured_use_case.py  test_relay_trip_completed_use_case.py  test_request_ride_use_case.py  test_retry_helper.py  test_ride_status_use_case.py  test_route_request_relay_use_case.py  (+2 more)
(+105 files in other folders)
