[build-system]
requires = ["setuptools==75.8.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ridenow"
version = "0.1.0"
description = "RideNow multi-service ride-hailing platform."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
  {name = "RideNow Assessment 2"},
]
dependencies = [
  "aio-pika==9.5.5",
  "asyncpg==0.30.0",
  "fastapi==0.115.12",
  "prometheus-client==0.21.1",
  "pydantic==2.11.3",
  "pydantic-settings==2.8.1",
  "python-json-logger==3.3.0",
  "sqlalchemy==2.0.40",
  "structlog==25.2.0",
  "uvicorn==0.34.1",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]==7.8.0",
  "httpx==0.28.1",
  "mypy==1.15.0",
  "pytest==8.3.5",
  "pytest-asyncio==0.26.0",
  "pytest-cov==6.1.1",
  "ruff==0.11.6",
]
docs = [
  "mkdocs==1.6.1",
  "mkdocs-material==9.6.11",
]
nonfunctional = [
  "pip-audit==2.9.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [
  "src",
  "services/broker/src",
  "services/driver/src",
  "services/notification/src",
  "services/payment/src",
  "services/pricing/src",
  "services/route/src",
  "services/tracking/src",
]
include = [
  "ridenow_*",
]
