[build-system]
requires = ["setuptools==75.8.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ridenow"
version = "0.1.0"
description = "RideNow multi-service ride-hailing platform."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
  {name = "RideNow Assessment 2"},
]
dependencies = [
  "aio-pika==9.5.5",
  "asyncpg==0.30.0",
  "fastapi==0.115.12",
  "prometheus-client==0.21.1",
  "pydantic==2.11.3",
  "pydantic-settings==2.8.1",
  "python-json-logger==3.3.0",
  "sqlalchemy==2.0.40",
  "structlog==25.2.0",
  "uvicorn==0.34.1",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]==7.8.0",
  "httpx==0.28.1",
  "mypy==1.15.0",
  "pytest==8.3.5",
  "pytest-asyncio==0.26.0",
  "pytest-cov==6.1.1",
  "ruff==0.11.6",
]
docs = [
  "mkdocs==1.6.1",
  "mkdocs-material==9.6.11",
]
nonfunctional = [
  "pip-audit==2.9.0",
]

[project.scripts]
ridenow-broker = "ridenow_broker.adapters.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [
  "src",
  "services/broker/src",
  "services/driver/src",
  "services/notification/src",
  "services/payment/src",
  "services/pricing/src",
  "services/route/src",
  "services/tracking/src",
]
include = [
  "ridenow_*",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = [
  "src",
  "services",
  "tests",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "N",
  "ASYNC",
  "A",
  "C4",
  "DTZ",
  "FA",
  "ICN",
  "PIE",
  "PT",
  "PTH",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "T20",
  "TC",
]
ignore = [
  "COM812",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",
  "PLR2004",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers -p no:cacheprovider"
testpaths = [
  "tests",
]
markers = [
  "acceptance: customer-visible acceptance and scenario tests",
  "integration: service and infrastructure integration tests",
  "contracts: contract tests for outbound ports and adapters",
  "e2e: high-value end-to-end smoke tests",
  "nonfunctional: performance, resilience, and security validation",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.12"
plugins = []
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
show_error_codes = true
pretty = true
namespace_packages = true
explicit_package_bases = true
mypy_path = [
  "src",
  "services/broker/src",
  "services/driver/src",
  "services/notification/src",
  "services/payment/src",
  "services/pricing/src",
  "services/route/src",
  "services/tracking/src",
]

[tool.coverage.run]
branch = true
source = [
  "src/ridenow_shared",
  "services/broker/src/ridenow_broker",
  "services/driver/src/ridenow_driver",
  "services/notification/src/ridenow_notification",
  "services/payment/src/ridenow_payment",
  "services/pricing/src/ridenow_pricing",
  "services/route/src/ridenow_route",
  "services/tracking/src/ridenow_tracking",
]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = false
